; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_dbus-timer.c_bus_timer_set_property.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_dbus-timer.c_bus_timer_set_property.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i64 }

@UNIT_STUB = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bus_timer_set_property(%struct.TYPE_4__* %0, i8* %1, i8* %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_4__*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i8*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %7, align 8
  store i8* %1, i8** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %14 = call i8* @TIMER(%struct.TYPE_4__* %13)
  store i8* %14, i8** %12, align 8
  %15 = load i8*, i8** %12, align 8
  %16 = call i32 @assert(i8* %15)
  %17 = load i8*, i8** %8, align 8
  %18 = call i32 @assert(i8* %17)
  %19 = load i8*, i8** %9, align 8
  %20 = call i32 @assert(i8* %19)
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 1
  %23 = load i64, i64* %22, align 8
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %38

25:                                               ; preds = %5
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = load i64, i64* @UNIT_STUB, align 8
  %30 = icmp eq i64 %28, %29
  br i1 %30, label %31, label %38

31:                                               ; preds = %25
  %32 = load i8*, i8** %12, align 8
  %33 = load i8*, i8** %8, align 8
  %34 = load i8*, i8** %9, align 8
  %35 = load i32, i32* %10, align 4
  %36 = load i32*, i32** %11, align 8
  %37 = call i32 @bus_timer_set_transient_property(i8* %32, i8* %33, i8* %34, i32 %35, i32* %36)
  store i32 %37, i32* %6, align 4
  br label %39

38:                                               ; preds = %25, %5
  store i32 0, i32* %6, align 4
  br label %39

39:                                               ; preds = %38, %31
  %40 = load i32, i32* %6, align 4
  ret i32 %40
}

declare dso_local i8* @TIMER(%struct.TYPE_4__*) #1

declare dso_local i32 @assert(i8*) #1

declare dso_local i32 @bus_timer_set_transient_property(i8*, i8*, i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
